k8s/istio/db.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: database
spec:
  hosts:
  - postgresql
  addresses:
    - 192.168.1.20
  ports:
  - name: tcp-ok
    number: 5432
    protocol: TCP
  location: MESH_EXTERNAL
  # resolution: DNS
